--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code</li>
+          <li>Control flow is the order in which a computer executes code in a script</li>
+          <li>using the math function helps select a random number, this functionality is added to randomise your selection</li>
         </ul>
       </section>
     </main>
